--- a/package.json
+++ b/package.json
@@ -5,9 +5,10 @@
   "main": "index.ts",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "npm run prod && node dist/index.js",
+    "start": "node dist/index.js",
     "dev": "cross-env NODE_ENV=development webpack --config configs/webpack.config.dev.js --watch --colors",
-    "prod": "cross-env NODE_ENV=production webpack --config configs/webpack.config.prod.js --colors",
+    "prod": "cross-env NODE_ENV=production webpack --config configs/webpack.config.prod.js --colors && node dist/index.js",
+    "build": "cross-env NODE_ENV=production webpack --config configs/webpack.config.prod.js --colors",
     "postinstall": "echo \u001b[36m It works!\u001b[0m Thanks for using our template! Check out\u001b[35m http://teckdigital.de && echo \u001b[36m Open 'index.ts' to see your changes hot reloading. \u001b[0m"
   },
   "author": "TECKdigital",
@@ -29,12 +30,30 @@
   "devDependencies": {
     "@babel/core": "^7.11.6",
     "@babel/plugin-proposal-class-properties": "^7.10.4",
+    "@babel/plugin-proposal-decorators": "^7.10.5",
+    "@babel/plugin-proposal-do-expressions": "^7.10.4",
+    "@babel/plugin-proposal-export-default-from": "^7.10.4",
+    "@babel/plugin-proposal-export-namespace-from": "^7.10.4",
+    "@babel/plugin-proposal-function-bind": "^7.11.5",
+    "@babel/plugin-proposal-function-sent": "^7.10.4",
+    "@babel/plugin-proposal-json-strings": "^7.10.4",
+    "@babel/plugin-proposal-logical-assignment-operators": "^7.11.0",
+    "@babel/plugin-proposal-nullish-coalescing-operator": "^7.10.4",
+    "@babel/plugin-proposal-numeric-separator": "^7.10.4",
+    "@babel/plugin-proposal-optional-chaining": "^7.11.0",
+    "@babel/plugin-proposal-pipeline-operator": "^7.10.5",
+    "@babel/plugin-proposal-throw-expressions": "^7.10.4",
     "@babel/plugin-syntax-dynamic-import": "^7.8.3",
+    "@babel/plugin-syntax-import-meta": "^7.10.4",
+    "@babel/plugin-transform-typescript": "^7.12.1",
     "@babel/preset-env": "^7.11.5",
+    "@babel/preset-typescript": "^7.12.1",
+    "@types/lodash": "^4.14.162",
     "@types/node": "^14.11.10",
     "babel-eslint": "^10.1.0",
     "babel-loader": "^8.1.0",
     "clean-webpack-plugin": "^3.0.0",
+    "core-js": "^3.6.5",
     "cross-env": "^7.0.2",
     "eslint": "^7.9.0",
     "eslint-loader": "^4.0.2",
@@ -43,6 +62,7 @@
     "typescript": "^4.0.3",
     "webpack": "^4.44.2",
     "webpack-cli": "^3.3.12",
-    "webpack-merge": "^5.1.4"
+    "webpack-merge": "^5.1.4",
+    "webpack-node-externals": "^2.5.2"
   }
 }
