--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,11 @@
 {
   "compilerOptions": {
     "target": "es5",
-    "lib": ["dom", "dom.iterable", "esnext"],
+    "lib": [
+      "dom",
+      "dom.iterable",
+      "esnext",
+    ],
     "allowJs": true,
     "skipLibCheck": true,
     "esModuleInterop": true,
@@ -14,6 +18,12 @@
     "resolveJsonModule": true,
     "jsx": "react"
   },
-  "types": ["node"],
-  "include": ["src"]
+  "types": [
+    "node"
+  ],
+  "exclude": [
+    "test",
+    "dist",
+    "configs",
+  ]
 }
