--- a/package.json
+++ b/package.json
@@ -49,15 +49,19 @@
     "@babel/plugin-transform-typescript": "^7.12.1",
     "@babel/preset-env": "^7.11.5",
     "@babel/preset-typescript": "^7.12.1",
-    "@types/lodash": "^4.14.162",
     "@types/node": "^14.11.10",
+    "@typescript-eslint/eslint-plugin": "^4.4.1",
+    "@typescript-eslint/parser": "^4.4.1",
     "babel-eslint": "^10.1.0",
     "babel-loader": "^8.1.0",
     "clean-webpack-plugin": "^3.0.0",
     "core-js": "^3.6.5",
     "cross-env": "^7.0.2",
-    "eslint": "^7.9.0",
+    "eslint": "^7.11.0",
+    "eslint-config-airbnb-base": "^14.2.0",
+    "eslint-import-resolver-webpack": "^0.13.0",
     "eslint-loader": "^4.0.2",
+    "eslint-plugin-import": "^2.22.1",
     "file-loader": "^6.1.0",
     "run-node-webpack-plugin": "^1.3.0",
     "typescript": "^4.0.3",
@@ -65,5 +69,6 @@
     "webpack-cli": "^3.3.12",
     "webpack-merge": "^5.1.4",
     "webpack-node-externals": "^2.5.2"
-  }
+  },
+  "dependencies": {}
 }
