--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "dev": "cross-env NODE_ENV=development webpack --config configs/webpack.config.dev.js --watch --colors",
     "prod": "cross-env NODE_ENV=production webpack --config configs/webpack.config.prod.js --colors && node dist/index.js",
     "build": "cross-env NODE_ENV=production webpack --config configs/webpack.config.prod.js --colors",
-    "postinstall": "echo \u001b[36m It works!\u001b[0m Thanks for using our template! Check out\u001b[35m http://teckdigital.de && echo \u001b[36m Open 'index.ts' to see your changes hot reloading. \u001b[0m"
+    "postinstall": "echo \u001b[36m It works!\u001b[0m Thanks for using our template! Check out\u001b[35m http://teckdigital.de && echo \u001b[36m Run 'yarn dev' and open 'index.ts' to see your changes hot reloading. \u001b[0m"
   },
   "author": "TECKdigital",
   "repository": {
@@ -27,6 +27,27 @@
       "url": "https://h4hn.de"
     }
   ],
+  "prettier": {
+    "overrides": [
+      {
+        "files": [
+          ".prettierrc",
+          ".babelrc",
+          ".eslintrc",
+          ".stylelintrc"
+        ],
+        "options": {
+          "parser": "json"
+        }
+      }
+    ]
+  },
+  "stylelint": {
+    "extends": [
+      "stylelint-config-standard",
+      "stylelint-config-prettier"
+    ]
+  },
   "license": "UNLICENSED",
   "devDependencies": {
     "@babel/core": "^7.11.6",
@@ -52,17 +73,18 @@
     "@types/node": "^14.11.10",
     "@typescript-eslint/eslint-plugin": "^4.4.1",
     "@typescript-eslint/parser": "^4.4.1",
-    "babel-eslint": "^10.1.0",
     "babel-loader": "^8.1.0",
     "clean-webpack-plugin": "^3.0.0",
     "core-js": "^3.6.5",
     "cross-env": "^7.0.2",
     "eslint": "^7.11.0",
-    "eslint-config-airbnb-base": "^14.2.0",
+    "eslint-config-prettier": "^7.1.0",
     "eslint-import-resolver-webpack": "^0.13.0",
-    "eslint-loader": "^4.0.2",
     "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-prettier": "^3.3.0",
+    "eslint-webpack-plugin": "^2.4.1",
     "file-loader": "^6.1.0",
+    "prettier": "^2.2.1",
     "run-node-webpack-plugin": "^1.3.0",
     "typescript": "^4.0.3",
     "webpack": "^4.44.2",
@@ -70,5 +92,11 @@
     "webpack-merge": "^5.1.4",
     "webpack-node-externals": "^2.5.2"
   },
-  "dependencies": {}
+  "dependencies": {
+  },
+  "devEngines": {
+    "node": ">=7.x",
+    "npm": ">=4.x",
+    "yarn": ">=0.21.3"
+  }
 }
