--- a/package.json
+++ b/package.json
@@ -1,80 +1,79 @@
 {
-  "name": "typescript-webpack-template",
-  "version": "1.0.0",
-  "description": "A typescript webpack template for hot reload script development.",
-  "main": "index.ts",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node dist/index.js",
-    "dev": "cross-env NODE_ENV=development webpack --config configs/webpack.config.dev.js --watch --colors",
-    "prod": "cross-env NODE_ENV=production webpack --config configs/webpack.config.prod.js --colors && node dist/index.js",
-    "build": "cross-env NODE_ENV=production webpack --config configs/webpack.config.prod.js --colors",
-    "postinstall": "echo \u001b[36m It works!\u001b[0m Thanks for using our template! Check out\u001b[35m http://teckdigital.de && echo \u001b[36m Run 'yarn dev' and open 'index.ts' to see your changes hot reloading. \u001b[0m"
-  },
-  "author": "TECKdigital",
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/teck-digital/typescript-webpack-template"
-  },
-  "contributors": [
-    {
-      "name": "Timo Peters",
-      "email": "peters@teck-digital.de"
+    "name": "typescript-webpack-template",
+    "version": "1.0.2",
+    "description": "A typescript webpack template for hot reload script development.",
+    "main": "index.ts",
+    "scripts": {
+        "test": "echo \"Error: no test specified\" && exit 1",
+        "start": "node dist/index.js",
+        "dev": "cross-env NODE_ENV=development webpack --config configs/webpack.config.dev.js --watch --colors",
+        "prod": "cross-env NODE_ENV=production webpack --config configs/webpack.config.prod.js --colors && node dist/index.js",
+        "build": "cross-env NODE_ENV=production webpack --config configs/webpack.config.prod.js --colors",
+        "postinstall": "echo \u001b[36m It works!\u001b[0m Thanks for using our template! Check out\u001b[35m http://teckdigital.de && echo \u001b[36m Run 'yarn dev' and open 'index.ts' to see your changes hot reloading. \u001b[0m"
     },
-    {
-      "name": "Yannik Hahn",
-      "email": "hahn@teck-digital.de",
-      "url": "https://h4hn.de"
+    "author": "TECKdigital",
+    "repository": {
+        "type": "git",
+        "url": "https://github.com/teck-digital/typescript-webpack-template"
+    },
+    "contributors": [
+        {
+            "name": "Timo Peters",
+            "email": "peters@teck-digital.de"
+        },
+        {
+            "name": "Yannik Hahn",
+            "email": "hahn@teck-digital.de",
+            "url": "https://h4hn.de"
+        }
+    ],
+    "license": "MIT",
+    "devDependencies": {
+        "@babel/core": "^7.11.6",
+        "@babel/plugin-proposal-class-properties": "^7.10.4",
+        "@babel/plugin-proposal-decorators": "^7.10.5",
+        "@babel/plugin-proposal-do-expressions": "^7.10.4",
+        "@babel/plugin-proposal-export-default-from": "^7.10.4",
+        "@babel/plugin-proposal-export-namespace-from": "^7.10.4",
+        "@babel/plugin-proposal-function-bind": "^7.11.5",
+        "@babel/plugin-proposal-function-sent": "^7.10.4",
+        "@babel/plugin-proposal-json-strings": "^7.10.4",
+        "@babel/plugin-proposal-logical-assignment-operators": "^7.11.0",
+        "@babel/plugin-proposal-nullish-coalescing-operator": "^7.10.4",
+        "@babel/plugin-proposal-numeric-separator": "^7.10.4",
+        "@babel/plugin-proposal-optional-chaining": "^7.11.0",
+        "@babel/plugin-proposal-pipeline-operator": "^7.10.5",
+        "@babel/plugin-proposal-throw-expressions": "^7.10.4",
+        "@babel/plugin-syntax-dynamic-import": "^7.8.3",
+        "@babel/plugin-syntax-import-meta": "^7.10.4",
+        "@babel/plugin-transform-typescript": "^7.12.1",
+        "@babel/preset-env": "^7.11.5",
+        "@babel/preset-typescript": "^7.12.1",
+        "@types/node": "^14.11.10",
+        "@typescript-eslint/eslint-plugin": "^4.4.1",
+        "@typescript-eslint/parser": "^4.4.1",
+        "babel-loader": "^8.1.0",
+        "clean-webpack-plugin": "^3.0.0",
+        "cross-env": "^7.0.2",
+        "eslint": "^7.11.0",
+        "eslint-config-prettier": "^7.1.0",
+        "eslint-import-resolver-webpack": "^0.13.0",
+        "eslint-plugin-import": "^2.22.1",
+        "eslint-plugin-prettier": "^3.3.0",
+        "eslint-webpack-plugin": "^2.4.1",
+        "file-loader": "^6.1.0",
+        "prettier": "^2.2.1",
+        "run-node-webpack-plugin": "^1.3.0",
+        "typescript": "^4.0.3",
+        "webpack": "^4.44.2",
+        "webpack-cli": "^3.3.12",
+        "webpack-merge": "^5.1.4",
+        "webpack-node-externals": "^2.5.2"
+    },
+    "dependencies": {},
+    "devEngines": {
+        "node": ">=7.x",
+        "npm": ">=4.x",
+        "yarn": ">=0.21.3"
     }
-  ],
-  "license": "UNLICENSED",
-  "devDependencies": {
-    "@babel/core": "^7.11.6",
-    "@babel/plugin-proposal-class-properties": "^7.10.4",
-    "@babel/plugin-proposal-decorators": "^7.10.5",
-    "@babel/plugin-proposal-do-expressions": "^7.10.4",
-    "@babel/plugin-proposal-export-default-from": "^7.10.4",
-    "@babel/plugin-proposal-export-namespace-from": "^7.10.4",
-    "@babel/plugin-proposal-function-bind": "^7.11.5",
-    "@babel/plugin-proposal-function-sent": "^7.10.4",
-    "@babel/plugin-proposal-json-strings": "^7.10.4",
-    "@babel/plugin-proposal-logical-assignment-operators": "^7.11.0",
-    "@babel/plugin-proposal-nullish-coalescing-operator": "^7.10.4",
-    "@babel/plugin-proposal-numeric-separator": "^7.10.4",
-    "@babel/plugin-proposal-optional-chaining": "^7.11.0",
-    "@babel/plugin-proposal-pipeline-operator": "^7.10.5",
-    "@babel/plugin-proposal-throw-expressions": "^7.10.4",
-    "@babel/plugin-syntax-dynamic-import": "^7.8.3",
-    "@babel/plugin-syntax-import-meta": "^7.10.4",
-    "@babel/plugin-transform-typescript": "^7.12.1",
-    "@babel/preset-env": "^7.11.5",
-    "@babel/preset-typescript": "^7.12.1",
-    "@types/node": "^14.11.10",
-    "@typescript-eslint/eslint-plugin": "^4.4.1",
-    "@typescript-eslint/parser": "^4.4.1",
-    "babel-loader": "^8.1.0",
-    "clean-webpack-plugin": "^3.0.0",
-    "core-js": "^3.6.5",
-    "cross-env": "^7.0.2",
-    "eslint": "^7.11.0",
-    "eslint-config-prettier": "^7.1.0",
-    "eslint-import-resolver-webpack": "^0.13.0",
-    "eslint-plugin-import": "^2.22.1",
-    "eslint-plugin-prettier": "^3.3.0",
-    "eslint-webpack-plugin": "^2.4.1",
-    "file-loader": "^6.1.0",
-    "prettier": "^2.2.1",
-    "run-node-webpack-plugin": "^1.3.0",
-    "typescript": "^4.0.3",
-    "webpack": "^4.44.2",
-    "webpack-cli": "^3.3.12",
-    "webpack-merge": "^5.1.4",
-    "webpack-node-externals": "^2.5.2"
-  },
-  "dependencies": {},
-  "devEngines": {
-    "node": ">=7.x",
-    "npm": ">=4.x",
-    "yarn": ">=0.21.3"
-  }
 }
